--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/red"
         android:textColor="@color/white"
-        android:text="@string/login"/>
+        android:text="@string/admin"/>
     <Button
         android:id="@+id/CustomerBtn"
         android:layout_width="190dp"
