--- a/app/src/main/res/layout/activity_personal__info_activity.xml
+++ b/app/src/main/res/layout/activity_personal__info_activity.xml
@@ -58,7 +58,7 @@
         android:inputType="number|phone"
         android:hint="@string/hint_number"/>
     <TextView
-              android:text="@string/email"
+        android:text="@string/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -72,61 +72,62 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="3">
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/date_of_birth" />
+            android:text="@string/date_of_birth"
+            android:layout_weight="1.25"/>
 
         <TextView
             android:id="@+id/DOB"
-            android:layout_width="112dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAlignment="textEnd"
             android:textStyle="bold"
             android:textColor="@color/red"
-            android:paddingLeft="20dp"/>
+            android:paddingLeft="20dp"
+            android:layout_weight="1.5"/>
         <ImageView
             android:id="@+id/btnbirth"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-           android:layout_gravity="right"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
             android:src="@drawable/date_picker"
-            />
+            android:layout_weight="0.25"/>
 
 
     </LinearLayout>
-<!--<Button-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content" />-->
-<!--</LinearLayout>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:text="@string/anniversary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:orientation="horizontal"
+        android:weightSum="3">
+        <TextView
+            android:text="@string/anniversary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.25"/>
 
         <TextView
             android:id="@+id/anniversary"
-            android:layout_width="118dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingLeft="22dp"
             android:textAlignment="textEnd"
             android:textColor="@color/red"
-            android:textStyle="bold" />
-    <ImageView
-        android:id="@+id/btnanniversary"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentRight="true"
-       android:layout_gravity="right"
-        android:src="@drawable/date_picker" />
+            android:textStyle="bold"
+            android:layout_weight="1.5"/>
+        <ImageView
+            android:id="@+id/btnanniversary"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_weight="0.25"
+            android:layout_gravity="center"
+            android:src="@drawable/date_picker" />
     </LinearLayout>
     <Button
         android:id="@+id/next"
